feat: 添加Safe多签管理界面及启动脚本
添加Safe多签钱包的本地管理界面，包含HTML/CSS/JavaScript实现的前端页面
新增npm serve和start脚本用于启动本地服务器
临时注释掉send-transactions.ts中的多签确认逻辑

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "send-transactions": "node --loader ts-node/esm src/send-transactions.ts",
     "dev": "node --loader ts-node/esm src/send-transactions.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "serve": "python3 -m http.server 8080 --directory public",
+    "start": "npm run serve"
   },
   "keywords": [],
   "author": "",
