feat(交易): 添加提议交易功能及界面
添加提议新交易的功能，包括：
1. 在界面中添加提议按钮和表单
2. 实现交易提议逻辑
3. 添加相关样式
4. 重命名脚本命令以匹配功能

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "send-transactions": "node --loader ts-node/esm src/send-transactions.ts",
+    "propose-transactions": "node --loader ts-node/esm src/send-transactions.ts",
     "dev": "node --loader ts-node/esm src/send-transactions.ts",
     "build": "tsc",
     "serve": "python3 -m http.server 8080 --directory public",
