--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "type": "module",
   "scripts": {
     "propose-transactions": "node --loader ts-node/esm src/send-transactions.ts",
-    "dev": "node --loader ts-node/esm src/send-transactions.ts",
-    "build": "tsc",
+    "dev": "webpack serve --mode development",
+    "build": "webpack --mode production",
+    "build-ts": "tsc",
     "serve": "python3 -m http.server 8080 --directory public",
+    "serve-dist": "python3 -m http.server 8082 --directory dist",
     "start": "npm run serve"
   },
   "keywords": [],
@@ -24,9 +26,25 @@
     "@nomicfoundation/hardhat-ignition": "^3.0.3",
     "@nomicfoundation/hardhat-toolbox-viem": "^5.0.0",
     "@types/node": "^22.18.6",
+    "assert": "^2.1.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "copy-webpack-plugin": "^13.0.1",
+    "crypto-browserify": "^3.12.1",
     "forge-std": "github:foundry-rs/forge-std#v1.9.4",
     "hardhat": "^3.0.6",
+    "html-webpack-plugin": "^5.6.4",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "ts-loader": "^9.5.4",
     "ts-node": "^10.9.0",
-    "typescript": "~5.8.0"
+    "typescript": "~5.8.0",
+    "url": "^0.11.4",
+    "webpack": "^5.101.3",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
   }
 }
