feat: 优化前端交易表单和样式
refactor: 移除调试日志并改进错误处理

style: 调整模态框和表单的间距和样式

fix: 修复交易确认逻辑和地址显示问题

chore: 删除未使用的send-transactions.js文件

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "dev": "webpack serve --mode development",
     "build": "webpack --mode production",
     "build-ts": "tsc",
-    "serve": "python3 -m http.server 8080 --directory public",
-    "serve-dist": "python3 -m http.server 8082 --directory dist",
-    "start": "npm run serve"
+    "clean": "rm -rf dist",
+    "serve": "python3 -m http.server 8081 --directory dist",
+    "start": "npm run build && npm run serve"
   },
   "keywords": [],
   "author": "",
