feat(SafeManager): 添加创建新Safe的功能
- 新增创建Safe的模态窗口和表单
- 实现Safe创建逻辑和地址验证
- 添加加载状态显示和错误处理
- 更新API调用至v2版本
- 优化按钮布局和样式

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "propose-transactions": "node --loader ts-node/esm src/send-transactions.ts",
     "dev": "webpack serve --mode development",
-    "build": "webpack --mode production",
-    "build-ts": "tsc",
     "clean": "rm -rf dist",
+    "build": "npm run clean && webpack --mode production",
+    "build-ts": "tsc",
     "serve": "python3 -m http.server 8080 --directory dist",
     "start": "npm run build && npm run serve"
   },
